manifests/cert-manager/resources/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cert-manager
  ingress:
  # In-namespace
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": cert-manager
        app.kubernetes.io/name: cert-manager
  # Webhook
  - fromEntities:
    - host
    - remote-node
    toPorts:
    - ports:
      - port: "10250"
        protocol: TCP
      - port: "9402"
        protocol: TCP
  # Prometheus
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": prometheus
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: "9402"
        protocol: TCP
  egress:
  # In-namespace
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": cert-manager
        app.kubernetes.io/name: cert-manager
  # Kubernetes API
  - toEntities:
    - kube-apiserver
  # DNS
  - toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: "*"
    toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": kube-system
        k8s-app: kube-dns
  # HTTP
  - toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
      - port: "8081"
        protocol: TCP
      - port: "8444"
        protocol: TCP
